Update v1_stop
