# bustw_server/route.py
@@ -2,7 +2,8 @@ import sys
 from flask import Blueprint, jsonify, request, send_from_directory
 
 from .api import v1_root, v1_city, v1_info, v1_stop, v1_real, v1_time
-from .api.old import v1_stop_1, v1_city_1, v1_info_1, v1_real_1, v1_time_1
+from .api.old import v1_city_1, v1_info_1, v1_stop_1, v1_real_1, v1_time_1
+from .api.old import v1_stop_2
 
 
 # 初始化 city 藍圖
@@ -57,8 +58,12 @@ def stop(city, route):
         # v1_stop v1
         return jsonify(v1_stop_1.main(city, route))
 
-    else:
+    elif int(version) <= 2:
         # v1_stop v2
+        return jsonify(v1_stop_2.main(city, route))
+
+    else:
+        # v1_stop v3
         return jsonify(v1_stop.main(city, route))
 
 
